<resources>
    <string name="app_name">Duelo De Leyendas</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="jugadas">Jugadas</string>
    <string name="ganadas">Ganadas</string>
    <string name="kills">Kills</string>
    <string name="deads">Deads</string>
    <string name="assists">Assists</string>
    <string name="mejorUbicacion">Mejor Ubicación</string>
    <string name="puntaje">Puntaje</string>
    <string name="stats">Estadisticas</string>
    <string name="title_activity_estadisticas">Estadisticas Del Personaje</string>
    <string name="habilidades">Especialidades</string>
    <string name="debilidades">Debilidades</string>
    <string name="posicionIdeal">Posición Ideal</string>


</resources>
